versioned_docs/version-1.18/index.md
---
title: Welcome to Okteto!
description: This section will give you a brief overview of Okteto and its features
---

## Build modern development experiences with Okteto
Okteto transforms the way developers code, test, and deploy applications by offering a seamless, cloud-native development experience. Say goodbye to the complexities of setting up local environments and the discrepancies between development and production. With Okteto, you get a powerful platform that emulates your production environment in the cloud, ensuring that you can focus on what you do best: building great applications.

If you haven’t already, get your [free 30-day license key to get started here](https://www.okteto.com/free-trial/)

## Why Platform Teams choose Okteto?
- **Control, Governance, and Self-service access**: Enable your developers to easily access secure and reproducible ephemeral environments. Okteto abstracts the complexity of Kubernetes, providing developers with a straightforward path from code to deployment, all within the cloud. This means no more wrestling with local setup or inconsistencies between environments.

![Platform team using Okteto diagram](../../static/img/platform-team-diagram.jpg)

- **Create a seamless development experience**: With Okteto, your development environment is a one-click experience for everyone on the team. Featuring instantaneous Code Sync and Live Updates, experience the magic of seeing your code changes reflected instantly in your cloud environment. This allows for rapid testing and iteration without the need for rebuilds or redeployments, ensuring that your applications run just as smoothly in development as they do in production.

![Developing with Okteto Example](../../static/img/dev-environment-example.jpg)

- **Okteto Manifest simplifies environment automation**: Utilize the [Okteto Manifest](manifest/overview-manifest.mdx) to define and configure your development environments declaratively. This powerful feature ensures consistent and reproducible environments across your team, tailored to your projects' needs. Use the [Okteto Catalog](deploy/deploy-from-catalog.mdx) to create a collection of ready-to-use development environments for your development team.

![Platform team using Okteto diagram](../../static/img/manifest.jpg)

## Key features

### Development Environments
Okteto's [Development Environments](deploy/development-environments.mdx) enable you to deploy and develop applications directly in the cloud with a single [CLI command](core/using-okteto-cli.mdx) or click of a button. Write code locally on your machine and view your changes live, deployed in the cloud **as soon as you hit save**! You don't have to spend time configuring anything to do this.

### Automated Preview Environments
Collaborate and share your progress with ease. Okteto's [Preview Environments](preview/overview.mdx) automatically generate a unique, shareable version of your application for each pull request, making code reviews, automated end-to-end testing, and stakeholder feedback a breeze.

### Unified management interface
Manage your team's development environments, applications, workflows, and roles all from Okteto's [Admin Dashboard](admin/dashboard.mdx). This central hub provides visibility and control over your team's cloud-native development processes, making management straightforward and efficient.

### Save on infrastructure costs with Okteto Garbage Collection
Maximize efficiency and minimize costs with [Okteto's Garbage Collector](https://www.okteto.com/docs/reference/helm-chart-values.mdx#gc), an automated tool designed to keep your cloud-native development environments lean. This service automatically scales idle applications to zero and deletes unused resources. Tailor cleanup policies to your organization for optimal resource management.

## Get started today
Jump into our [installation guide](get-started/overview.mdx) to get started with Okteto. Or [Talk to us](https://okteto.com/schedule/) to let us show you how.

Need a license key? [Sign-up for a free 30-day trial](https://www.okteto.com/free-trial/).